# tkeditor

./: LICENSE  README.md  demo.py  folder_structure.txt  main.py  pyproject.toml  test.py
examples/: demo.py
tkeditor/: __init__.py  editor.py  editor.pyi
tkeditor/components/: __init__.py  autoscrollbar.py  folding_code.py  line_number.py
tkeditor/config/: settings.py
tkeditor/core/: __init__.py  auto_indent.py  base_editor.py  bracket_match.py  init_config.py  manage.py
tkeditor/features/: __init__.py  auto_indent.py  bracket_match.py  context_menu.py  line_number.py  tab_handler.py
tkeditor/lexers/: __init__.py  base_lexer.py  baselexer.py  baselexer.pyi  bashlexer.py  clexer.py  clexercsharp.py  cpplexer.py  css_lexer.py  csslexer.py  dartlexer.py  golexer.py  highlight.py  html_lexer.py  htmllexer.py  javalexer.py  js_lexer.py  jslexer.py  jsonlexer.py  kotlinlexer.py  lualexer.py  markdownlexer.py  phplexer.py  python_lexer.py  pythonlexer.py  rubylexer.py  rustlexer.py  swiftlexer.py  tslexer.py  xmllexer.py  yamllexer.py
tkeditor/ui/: __init__.py  autocompleteBox.py  base_editor.py  context_menu.py  folding_code.py  line_number.py
tkeditor/utils/: __init__.py  helper.py
